# uct-repository-theses

./: pyproject.toml
uct_repository_theses/: __init__.py  config.py  constants.py  ext.py  fetchers.py  minters.py  providers.py  record.py  search.py
uct_repository_theses/jsonschemas/: __init__.py
uct_repository_theses/jsonschemas/uct_repository_theses/: uct-repository-theses-v1.0.0.json
uct_repository_theses/mappings/: __init__.py
uct_repository_theses/mappings/v7/uct_repository_theses/: uct-repository-theses-v1.0.0.json
uct_repository_theses/marshmallow/: __init__.py  json.py  subschemas.py
